--- a/package.json
+++ b/package.json
@@ -21,29 +21,29 @@
     "major-publish": "npm version major && npm publish --access public && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "^16.4.11",
-    "@types/react-router": "^4.0.30",
-    "@vzh/configs": "^2.2.0",
+    "@types/react": "^16.4.14",
+    "@types/react-router": "^4.0.31",
+    "@vzh/configs": "^2.11.1",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^9.0.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^5.5.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-css-modules": "^2.9.1",
+    "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.6.1",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-typescript": "^0.12.0",
     "history": "^4.7.2",
-    "prettier": "^1.14.2",
-    "react": "^16.5.0",
+    "prettier": "^1.14.3",
+    "react": "^16.5.2",
     "react-router": "^4.3.1",
     "rimraf": "^2.6.1",
-    "typescript": "^3.0.3",
-    "typescript-eslint-parser": "^18.0.0"
+    "typescript": "^3.1.1",
+    "typescript-eslint-parser": "^19.0.2"
+  },
+  "peerDependencies": {
+    "react": ">= 16.x",
+    "react-router": ">= 4.x"
   }
 }
