--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "clean": "rimraf dist/*",
     "build": "npm run clean && tsc --project ./tsconfig.json",
+    "build-to-project-langlearn": "npm run clean && tsc --project ./tsconfig.json --outDir '../project-langlearn/node_modules/@vzh/react-auth/dist/' && copyfiles package.json '../project-langlearn/node_modules/@vzh/react-auth/'",
     "prepublishOnly": "npm run clean && npm run build",
     "patch-publish": "npm version patch && npm publish --access public && git push --follow-tags",
     "minor-publish": "npm version minor && npm publish --access public && git push --follow-tags",
@@ -26,6 +27,7 @@
     "@vzh/configs": "^2.11.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
+    "copyfiles": "^2.1.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
