--- a/package.json
+++ b/package.json
@@ -22,27 +22,28 @@
     "major-publish": "npm version major && npm publish --access public && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "^16.4.14",
-    "@types/react-router": "^4.0.31",
-    "@vzh/configs": "^2.11.1",
+    "@types/react": "^16.4.18",
+    "@types/react-router": "^4.4.0",
+    "@vzh/configs": "^2.16.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
     "copyfiles": "^2.1.0",
-    "eslint": "^5.6.1",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.0",
-    "eslint-plugin-typescript": "^0.12.0",
+    "eslint-plugin-typescript": "^0.13.0",
     "history": "^4.7.2",
     "prettier": "^1.14.3",
-    "react": "^16.5.2",
+    "react": "^16.6.0",
     "react-router": "^4.3.1",
     "rimraf": "^2.6.1",
-    "typescript": "^3.1.1",
-    "typescript-eslint-parser": "^19.0.2"
+    "typescript": "^3.1.6",
+    "typescript-eslint-parser": "^20.1.1",
+    "webpack-merge": "^4.1.4"
   },
   "peerDependencies": {
     "react": ">= 16.x",
