--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "major-publish": "npm version major && npm publish --access public && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "^16.4.18",
-    "@types/react-router": "^4.4.0",
+    "@types/react": "16.8.2",
+    "@types/react-router": "^4.4.3",
     "@typescript-eslint/eslint-plugin": "^1.2.0",
     "@typescript-eslint/parser": "^1.2.0",
     "@vzh/configs": "^3.15.0",
     "babel-eslint": "^10.0.1",
     "copyfiles": "^2.1.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "history": "^4.7.2",
     "prettier": "^1.14.3",
     "react": "^16.8.1",
     "react-router": "^4.3.1",
-    "rimraf": "^2.6.1",
-    "typescript": "^3.1.6",
-    "webpack-merge": "^4.1.4"
+    "rimraf": "^2.6.3",
+    "typescript": "^3.3.3",
+    "webpack-merge": "^4.2.1"
   },
   "peerDependencies": {
     "react": ">= 16.x",
