--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "clean": "rimraf dist/*",
     "build": "npm run clean && tsc --project ./tsconfig.json",
-    "build-to-tutoron": "npm run clean && tsc --project ./tsconfig.json --outDir '~/dev/sources/tutoron/node_modules/@vzh/react-auth/dist/' && copyfiles package.json '~/dev/sources/tutoron/node_modules/@vzh/react-auth/'",
+    "build-to-tutoron": "npm run clean && tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/dist/' && copyfiles package.json '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/'",
+    "build-to-pwa": "npm run clean && tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/pwa/node_modules/@vzh/react-auth/dist/' && copyfiles package.json '/home/vladimir/dev/sources/pwa/node_modules/@vzh/react-auth/'",
     "prepublishOnly": "npm run clean && npm run build",
     "patch-publish": "npm version patch && npm publish --access public && git push --follow-tags",
     "minor-publish": "npm version minor && npm publish --access public && git push --follow-tags",
@@ -26,7 +27,7 @@
     "@types/react-router": "^4.4.3",
     "@typescript-eslint/eslint-plugin": "^1.2.0",
     "@typescript-eslint/parser": "^1.2.0",
-    "@vzh/configs": "^3.15.0",
+    "@vzh/configs": "^3.15.1",
     "babel-eslint": "^10.0.1",
     "copyfiles": "^2.1.0",
     "eslint": "^5.13.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.0.1",
     "history": "^4.7.2",
     "prettier": "^1.14.3",
     "react": "^16.8.1",
