--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "extends": "./node_modules/@vzh/configs/ts/dev.tsconfig.json",
   "compilerOptions": {
+    "isolatedModules": false,
     "baseUrl": "./lib/src",
     "outDir": "./dist",
     "declaration": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "incremental": false
   },
   "files": ["./lib/src/index.ts"]
 }
