--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
-  "extends": "./node_modules/@vzh/configs/ts/dev.tsconfig.json",
+  "extends": "@vzh/configs/ts/dev.tsconfig.json",
   "compilerOptions": {
     "isolatedModules": false,
-    "baseUrl": "./lib/src",
+    "baseUrl": "./src",
     "outDir": "./dist",
     "declaration": true,
     "sourceMap": false,
     "incremental": false
   },
-  "files": ["./lib/src/index.ts"]
+  "files": ["./src/index.ts"]
 }
