--- a/package.json
+++ b/package.json
@@ -23,29 +23,28 @@
     "major-publish": "npm version major && npm run build && npm publish ./dist/ && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "16.8.18",
-    "@types/react-router": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
-    "@vzh/configs": "^3.24.1",
+    "@types/react": "16.8.22",
+    "@types/react-router": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "@vzh/configs": "../configs/dist/",
     "@vzh/prettier-config": "^1.1.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "copyfiles": "^2.1.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.0.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "history": "^4.9.0",
-    "prettier": "^1.17.1",
+    "prettier": "^1.18.2",
     "react": "^16.8.6",
-    "react-router": "^5.0.0",
+    "react-router": "^5.0.1",
     "rimraf": "^2.6.3",
-    "typescript": "^3.4.5",
-    "webpack-merge": "^4.2.1"
+    "typescript": "^3.5.2"
   },
   "peerDependencies": {
     "react": ">= 16.x",
