--- a/package.json
+++ b/package.json
@@ -16,35 +16,34 @@
     "clean": "rimraf dist/*",
     "copy:configs": "copyfiles package.json README.md LICENSE ./dist/",
     "build": "npm run clean && tsc --project ./tsconfig.json && npm run copy:configs",
-    "build-to-tutoron": "npm run clean && tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/'",
-    "build-to-pwa": "npm run clean && tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/pwa/node_modules/@vzh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/pwa/node_modules/@vzh/react-auth/'",
+    "build-to-tutoron": "tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/'",
+    "build-to-lcardio-app": "tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/lcardio-app/node_modules/@vzh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/lcardio-app/node_modules/@vzh/react-auth/'",
     "patch-publish": "npm version patch && npm run build && npm publish ./dist/ && git push --follow-tags",
     "minor-publish": "npm version minor && npm run build && npm publish ./dist/ && git push --follow-tags",
     "major-publish": "npm version major && npm run build && npm publish ./dist/ && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "16.8.22",
-    "@types/react-router": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
-    "@vzh/configs": "../configs/dist/",
-    "@vzh/prettier-config": "^1.1.0",
+    "@types/react": "16.8.24",
+    "@types/react-router": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "@vzh/configs": "^3.37.0",
     "babel-eslint": "^10.0.2",
-    "copyfiles": "^2.1.0",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.0",
+    "copyfiles": "^2.1.1",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "history": "^4.9.0",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-router": "^5.0.1",
     "rimraf": "^2.6.3",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.3"
   },
   "peerDependencies": {
     "react": ">= 16.x",
