--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     }
   ],
   "scripts": {
+    "update-deps": "yarn upgrade-interactive --latest",
     "clean": "rimraf dist/*",
     "copy:configs": "copyfiles package.json README.md LICENSE ./dist/",
     "build": "npm run clean && tsc --project ./tsconfig.json && npm run copy:configs",
@@ -23,26 +24,26 @@
     "major-publish": "npm version major && npm run build && npm publish ./dist/ && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "16.8.24",
+    "@types/react": "16.9.1",
     "@types/react-router": "^5.0.3",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "@vzh/configs": "^3.37.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "@vzh/configs": "^3.37.6",
     "babel-eslint": "^10.0.2",
     "copyfiles": "^2.1.1",
     "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "history": "^4.9.0",
     "prettier": "^1.18.2",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-router": "^5.0.1",
-    "rimraf": "^2.6.3",
+    "rimraf": "^2.7.0",
     "typescript": "^3.5.3"
   },
   "peerDependencies": {
