--- a/package.json
+++ b/package.json
@@ -18,17 +18,16 @@
     "copy:configs": "copyfiles package.json README.md LICENSE ./dist/",
     "build": "npm run clean && tsc --project ./tsconfig.json && npm run copy:configs",
     "build-to-tutoron": "tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/'",
-    "build-to-lcardio-app": "tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/lcardio-app/node_modules/@vzh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/lcardio-app/node_modules/@vzh/react-auth/'",
     "patch-publish": "npm version patch && npm run build && npm publish ./dist/ && git push --follow-tags",
     "minor-publish": "npm version minor && npm run build && npm publish ./dist/ && git push --follow-tags",
     "major-publish": "npm version major && npm run build && npm publish ./dist/ && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "16.9.5",
-    "@types/react-router": "^5.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.3.3",
-    "@typescript-eslint/parser": "^2.3.3",
-    "@vzh/configs": "^3.40.1",
+    "@types/react": "16.9.9",
+    "@types/react-router": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "@vzh/configs": "^3.40.2",
     "copyfiles": "^2.1.1",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
@@ -46,7 +45,6 @@
     "typescript": "^3.6.4"
   },
   "peerDependencies": {
-    "react": ">= 16.x",
-    "react-router": ">= 4.x"
+    "react": ">= 16.x"
   }
 }
