--- a/package.json
+++ b/package.json
@@ -7,32 +7,32 @@
   "author": "Vladimir Zhukov",
   "license": "MIT",
   "scripts": {
-    "update-deps": "yarn upgrade-interactive --latest",
     "clean": "rimraf dist/*",
-    "copy:configs": "copyfiles package.json README.md LICENSE ./dist/",
-    "build": "npm run clean && tsc --project ./tsconfig.json && npm run copy:configs",
+    "copy:configs": "copyfiles package.json README.md LICENSE .npmignore ./dist/",
+    "build": "npm run clean && tsc --project ./tsconfig.json",
     "build-to-tutoron": "tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/'",
-    "patch-publish": "npm version patch && npm run build && npm publish ./dist/ && git push --follow-tags",
-    "minor-publish": "npm version minor && npm run build && npm publish ./dist/ && git push --follow-tags",
-    "major-publish": "npm version major && npm run build && npm publish ./dist/ && git push --follow-tags"
+    "patch-publish": "npm run build && npm version patch && npm run copy:configs && npm publish ./dist/ && git push --follow-tags",
+    "minor-publish": "npm run build && npm version minor && npm run copy:configs && npm publish ./dist/ && git push --follow-tags",
+    "major-publish": "npm run build && npm version major && npm run copy:configs && npm publish ./dist/ && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "16.9.32",
-    "@types/react-router": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "@vzh/configs": "^3.46.0",
+    "@types/react": "16.9.35",
+    "@types/react-router": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "@vlazh/route-utils": "^0.2.0",
+    "@vzh/configs": "^3.53.2",
     "copyfiles": "^2.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "history": "^4.10.1",
-    "prettier": "^2.0.2",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-router": "^5.1.2",
     "rimraf": "^3.0.2",
