--- a/package.json
+++ b/package.json
@@ -1,42 +1,49 @@
 {
-  "name": "@vzh/react-auth",
+  "name": "@vlazh/react-auth",
   "version": "1.6.0",
   "description": "React auth components",
   "main": "index.js",
   "types": "index.d.ts",
   "author": "VZH",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vlazh/react-auth"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "clean": "rimraf dist/*",
     "copy:configs": "copyfiles package.json README.md LICENSE .npmignore ./dist/",
     "build": "npm run clean && tsc --project ./tsconfig.json",
-    "build-to-tutoron": "tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/tutoron/node_modules/@vzh/react-auth/'",
+    "build-to-tutoron": "tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/tutoron/node_modules/@vlazh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/tutoron/node_modules/@vlazh/react-auth/'",
     "patch-publish": "npm run build && npm version patch && npm run copy:configs && npm publish ./dist/ && git push --follow-tags",
     "minor-publish": "npm run build && npm version minor && npm run copy:configs && npm publish ./dist/ && git push --follow-tags",
     "major-publish": "npm run build && npm version major && npm run copy:configs && npm publish ./dist/ && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "16.9.35",
-    "@types/react-router": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
+    "@types/react": "17.0.3",
+    "@types/react-router": "^5.1.12",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "@vlazh/configs": "^3.73.7",
     "@vlazh/route-utils": "^0.2.0",
-    "@vzh/configs": "^3.53.2",
-    "copyfiles": "^2.2.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "history": "^4.10.1",
-    "prettier": "^2.0.5",
-    "react": "^16.13.1",
-    "react-router": "^5.1.2",
+    "copyfiles": "^2.4.1",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "history": "^4.9.0",
+    "prettier": "^2.2.1",
+    "react": "^17.0.1",
+    "react-router": "^5.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.2.3"
   },
   "peerDependencies": {
     "react": ">= 16.x"
