--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/react-router": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
-    "@vlazh/configs": "^3.73.7",
+    "@js-toolkit/configs": "^3.73.7",
     "@vlazh/route-utils": "^0.2.0",
     "copyfiles": "^2.4.1",
     "eslint": "^7.21.0",
