--- a/package.json
+++ b/package.json
@@ -19,31 +19,30 @@
     "build": "npm run clean && tsc --project ./tsconfig.json",
     "build-to-tutoron": "tsc --project ./tsconfig.json --outDir '/home/vladimir/dev/sources/tutoron/node_modules/@vlazh/react-auth/' && copyfiles package.json '/home/vladimir/dev/sources/tutoron/node_modules/@vlazh/react-auth/'",
     "patch-publish": "npm run build && npm version patch && npm run copy:configs && npm publish ./dist/ && git push --follow-tags",
-    "minor-publish": "npm run build && npm version minor && npm run copy:configs && npm publish ./dist/ && git push --follow-tags",
-    "major-publish": "npm run build && npm version major && npm run copy:configs && npm publish ./dist/ && git push --follow-tags"
+    "minor-publish": "npm run build && npm version minor && npm run copy:configs && npm publish ./dist/ && git push --follow-tags"
   },
   "devDependencies": {
-    "@types/react": "17.0.3",
-    "@types/react-router": "^5.1.12",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "@js-toolkit/configs": "^3.73.7",
-    "@vlazh/route-utils": "^0.2.0",
+    "@js-toolkit/configs": "^3.77.2",
+    "@types/react": "17.0.8",
+    "@types/react-router": "^5.1.14",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "@vlazh/route-utils": "^0.2.2",
     "copyfiles": "^2.4.1",
-    "eslint": "^7.21.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "history": "^4.9.0",
-    "prettier": "^2.2.1",
-    "react": "^17.0.1",
+    "history": "^5.0.0",
+    "prettier": "^2.3.0",
+    "react": "^17.0.2",
     "react-router": "^5.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.2"
   },
   "peerDependencies": {
     "react": ">= 16.x"
